# rsyslog

./: ChangeLog  Makefile.am  configure.ac  syslogd.c  tcps_sess.c  tcpsrv.c  template.c
dlopen/: lib.c  main.c  makefile
m4/: doc_i18n.m4  docbook.m4  xml2po.m4  xmllint.m4  xsltproc.m4
man/C/: Makefile.am  rsyslog.conf.5.xml
man/ja/: Makefile.am  rsyslog.conf.5.po  rsyslogd.8.po  rsyslogd.8.xml
plugins/imfile/: imfile.c
plugins/impstats/: impstats.c
plugins/imptcp/: imptcp.c
plugins/imtcp/: Makefile.am
plugins/imuxsock/: Makefile.am  imuxsock.c
plugins/omdtn/: Makefile.am  omdtn.c
plugins/omgssapi/: omgssapi.c
plugins/omhdfs/: omhdfs.c
runtime/: Makefile.am  apc.c  apc.h  atomic.h  avltree.c  avltree.h  datetime.c  datetime.h  debug.c  modules.c  msg.c  msg.h  net.c  nsd_gtls.c  nsd_gtls.h  nsd_ptcp.c  nsdsel_gtls.c  nsdsel_ptcp.c  obj.c  parser.c  queue.c  rsyslog.c  rsyslog.h  srutils.c  stream.c  stream.h  wti.c  wtp.c  wtp.h
tests/: 1.avltest  2.avltest  3.avltest  4.avltest  Makefile.am  asynwr_deadlock2.sh  avltree.c  diag.sh  manytcp.sh
tests/testsuites/: mark.parse1
tools/: Makefile.am  omfile.c  pmrfc3164.c  syslogd.c
